--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,14 +3,20 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
-table, th, td, tr {
-  border: 1px solid;
-  border-collapse: collapse;
+
+
+.wrapper {
+ 
+  padding-top : 100px;
+  padding-left: 200px;
 }
 
-.TopAlign {
-  vertical-align: top;
-}
+
+
+
+
+
+
 
 
 
