--- a/src/components/Row1/Row1.module.scss
+++ b/src/components/Row1/Row1.module.scss
@@ -9,7 +9,7 @@
     text-align: center;
 
     &:hover{
-        background-color: rgba(128, 128, 128, 0.211);
+        background-color: #e6e4c0;
         cursor: pointer;
     }
 
@@ -38,5 +38,5 @@
 }
 
 .onFocus {
-    background-color: rgba(128, 128, 128, 0.5);
+    background-color: #e6e4c0;
 }
