--- a/src/components/LeftBar/LeftBar.module.scss
+++ b/src/components/LeftBar/LeftBar.module.scss
@@ -3,19 +3,19 @@
 }
 
 .focus {
-    background-color: rgba(128, 128, 128, 0.5);
+    background-color: #e6e4c0;
 }
 
 
 
 .month_in:hover {
         cursor: pointer;
-        background-color: rgba(128, 128, 128, 0.211);
+        background-color: #e6e4c0;
 }
 
 .month_out:hover {
     cursor: pointer;
-    background-color: rgba(128, 128, 128, 0.211);
+    background-color: #e6e4c0;
 }
 
 
