--- a/src/components/Navigate/Navigate.module.scss
+++ b/src/components/Navigate/Navigate.module.scss
@@ -37,3 +37,23 @@
 .onFocus {
     background-color: #f2e57e;
 }
+a {
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
