--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,13 +1,11 @@
 
-
-
-
 .left {
     font-size: 20px;
     position: absolute;
     padding-left: 30px;
     left: -20px;
     top: 0px;
+    z-index: 4;
     display: flex;
     align-items: center;
     background-color: #f2f0e0;
@@ -23,7 +21,7 @@
     right: 0px;
     top: 0px;
     width: 60%;
-    z-index: -1;
+    z-index: 3;
     padding-right: 30px;
     height: 50px;
     background-color: #c7b299;
@@ -31,6 +29,9 @@
     justify-content: end;
     img {
         width: 30px;
-        margin-left: 50px;
+        margin-left: 20px;
+    }
+    img:hover {
+        cursor: pointer;
     }
 }
