--- a/src/part/Table/Table.module.scss
+++ b/src/part/Table/Table.module.scss
@@ -9,3 +9,24 @@ table, th, td, tr {
 .TopAlign {
     vertical-align: top;
   }
+
+  .yearDisplay {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.row0 {
+  display: flex;
+  align-items: center;
+  button {
+    margin-left: 10px;
+    font-size: 18px;
+    background-color: #f2f0e0;
+    border-radius: 10px;
+    border: none;
+    &:hover {
+      cursor: pointer;
+      background-color: #f2e57e;
+    }
+  }
+}
