--- a/src/components/Row1/Row1.module.scss
+++ b/src/components/Row1/Row1.module.scss
@@ -2,11 +2,17 @@
     display: block;
 }
 
+
+tr,td {
+    border: none;
+}
+
 .week {
     position: relative;
     font-size: 20px;
-    padding : 10px;
     text-align: center;
+    padding: 10px ;
+    width: 100px;
 
     &:hover{
         background-color: #e6e4c0;
