--- a/src/part/Layout/Layout.module.scss
+++ b/src/part/Layout/Layout.module.scss
@@ -2,3 +2,11 @@
     padding-top : 100px;
     padding-left: 200px;
 }
+
+@media only screen and (max-width: 800px) {
+    .main {
+        padding-left: 10px;
+        padding-top: 30px;
+        
+    }
+}
