--- a/src/part/Login/Login.module.scss
+++ b/src/part/Login/Login.module.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
     box-shadow: 5px 10px 18px #88888862;
     width: 70%;
@@ -17,7 +21,7 @@
     img {
         width: 100%;
         height: 100%;
-        border-radius: 20px 0px 0px 20px;
+        border-radius: 20px 20px 20px 20px;
     }
 }
 
@@ -25,9 +29,14 @@
 .right {
     width: 40%;
     text-align: center;
-    padding-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
     p {
         font-size: 35px;
+        margin-bottom: 10px;
     }
     img {
         width: 20px;
@@ -137,5 +146,19 @@
         img {
             margin-right: 10px;
         }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        display: block;
+    }
+    .left {
+        width: 100%;
+        height: 70%;
+    }
+    .right {
+        width: 100%;
+        height: 30%;
     }
 }
