--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -1,4 +1,5 @@
 .loader {
+    position:absolute;
     border: 16px solid #f3f3f3;
     border-radius: 50%;
     border-top: 16px solid #3498db;
@@ -6,7 +7,16 @@
     height: 50px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
+    top:50%;
+    left: 50%;
   }
+.loaderContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(250, 235, 215, 0.662);
+  z-index: 10;
+}
   
   /* Safari */
   @-webkit-keyframes spin {
