--- a/src/part/Table/Table.module.scss
+++ b/src/part/Table/Table.module.scss
@@ -30,3 +30,15 @@ table, th, td, tr {
     }
   }
 }
+
+.tableContainer {
+  position: relative;
+}
+.loader {
+  position: absolute;
+  background-color: rgba(250, 235, 215, 0.662);
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  border: 1px solid #000;;
+}
