reduce number of year

--- a/src/part/YearChoosen/YearChoosen.module.scss
+++ b/src/part/YearChoosen/YearChoosen.module.scss
@@ -47,3 +47,13 @@
 .moneyOut {
     color: #ff7377;
 }
+
+.row3 {
+    position: relative;
+    width: fit-content;
+}
+
+.container {
+    position: relative;
+    width: fit-content;
+}
