--- a/src/components/LeftBar/LeftBar.module.scss
+++ b/src/components/LeftBar/LeftBar.module.scss
@@ -22,9 +22,9 @@
 
 
 .tem {
+    flex: 100%;
     position: relative;
     padding: 20px;
-    width: 180px;
     text-align: center;
     align-items: center;
     
@@ -40,7 +40,7 @@
     }
 
     div:last-child {
-        font-size: 28px;
+        font-size: 26px;
     }
 
     img {
@@ -69,11 +69,11 @@
 
 @media only screen and (max-width:800px){
     .tem {
-        width: 170px;
-       padding:15px;
+       padding:15px 10px;
     }
     .dayLeft {
         display: flex;
+        justify-content: center;
         align-items: center;
     }
 }
@@ -82,4 +82,28 @@ table, th, td, tr {
     border: 1px solid;
     border-collapse: collapse;
     
+}
+
+@media only screen and (max-width: 800px) {
+    .tem {
+      
+        div:first-child {
+            font-size: 18px;
+        }
+    
+        div:nth-child(2) {
+            font-size: 25px;
+            font-weight: bold;
+        }
+    
+        div:last-child {
+            font-size: 18px;
+        }
+        .chi {
+            width: 30px;
+        }
+        .thu {
+            width: 35px;
+        }
+    }
 }
