--- a/src/components/Row1/Row1.module.scss
+++ b/src/components/Row1/Row1.module.scss
@@ -2,7 +2,6 @@
     display: block;
 }
 
-
 tr,td {
     border: none;
 }
@@ -12,7 +11,6 @@ tr,td {
     font-size: 20px;
     text-align: center;
     padding: 10px ;
-    width: 100px;
 
     &:hover{
         background-color: #e6e4c0;
@@ -49,4 +47,12 @@ tr,td {
 
 .moneyOut {
     color: #ff7377;
+}
+
+
+@media only screen and (max-width: 800px) {
+    .week {
+        font-size: 15px;
+        width: 70px;
+    }
 }
