--- a/src/part/MobileTable/MobileTable.module.scss
+++ b/src/part/MobileTable/MobileTable.module.scss
@@ -11,7 +11,7 @@ table, th, td, tr {
   }
 
   .yearDisplay {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -20,7 +20,7 @@ table, th, td, tr {
   align-items: center;
   button {
     margin-left: 10px;
-    font-size: 18px;
+    font-size: 15px;
     background-color: #f2f0e0;
     border-radius: 10px;
     border: none;
@@ -31,3 +31,14 @@ table, th, td, tr {
   }
 }
 
+.tableContainer {
+  position: relative;
+}
+.loader {
+  position: absolute;
+  background-color: rgba(250, 235, 215, 0.662);
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  border: 1px solid #000;;
+}
