--- a/src/components/RightBar/RightBar.module.scss
+++ b/src/components/RightBar/RightBar.module.scss
@@ -10,6 +10,13 @@
     padding: 0px 20px;
 }
 
+.date {
+    font-size: 20px;
+    font-style: italic;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
 .input {
     margin-top: 30px;
     font-size: 18px;
@@ -80,7 +87,7 @@
             textarea {
                 width: 100% ;
                 font-size: 15px;
-                margin-left: 10px;
+                margin-left: 15px;
             }
         }
     }
@@ -93,3 +100,4 @@
     }
 
 }
+
