--- a/src/part/Statistic/Statistic.module.scss
+++ b/src/part/Statistic/Statistic.module.scss
@@ -31,6 +31,7 @@
     }
 }
 .row1_right {
+    position: relative;
     border: 1px solid #000;
     padding: 10px;
     font-size: 20px;
@@ -87,6 +88,15 @@
         grid-row: 1/7;
     }
     
+}
+
+
+.on_img {
+    position: absolute;
+    width: 20px;
+    z-index: 10;
+    top:2px;
+    right: 2px;
 }
 
 
