--- a/src/components/LeftBar/LeftBar.module.scss
+++ b/src/components/LeftBar/LeftBar.module.scss
@@ -15,12 +15,19 @@
     background-color: #e6e4c0;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    
+}
 
+.grid_items {
+    border: 1px solid #000;
+}
 
 .tem {
     min-width: 150px;
     flex:1;
-    border: 1px solid #000;
     position: relative;
     display: flex;
     flex-flow: column;
@@ -63,9 +70,76 @@
     color: #ff7377;
 }
 
+.row1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.tem2 { 
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding: 20px 0px;
+    div:first-child {
+        font-size: 22px;
+    }
+
+    div:nth-child(2) {
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    div:last-child {
+        font-size: 22px;
+    }
+}
+
+.tem3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img {
+        width: 40px;
+    }
+    div {
+        font-weight: bold;
+        margin-top: 10px;
+        font-size: 30px;
+    }
+}
+
 
 
 @media only screen and (max-width: 800px) {
+
+    .tem3 {
+        div {
+            font-size: 22px;
+        }
+    }
+
+    .tem2 { 
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        padding: 20px 0px;
+        div:first-child {
+            font-size: 18px;
+        }
+    
+        div:nth-child(2) {
+            font-size: 25px;
+            font-weight: bold;
+        }
+    
+        div:last-child {
+            font-size: 18px;
+        }
+    }
+
     .tem {
         padding:15px 10px;
      }
@@ -100,6 +174,6 @@
 
 @media (max-width:950px) and (min-width:700px) {
     .container {
-        display: flex;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
